@@ -163,15 +163,7 @@ extern void ResetDevicePrivateIndex(void);
 extern KeybdCtrl	defaultKeyboardControl;
 extern PtrCtrl		defaultPointerControl;
 
-#undef  AddInputDevice
-extern DevicePtr AddInputDevice(
-    DeviceProc /*deviceProc*/,
-    Bool /*autoStart*/);
-
-#define AddInputDevice(deviceProc, autoStart) \
-       _AddInputDevice(deviceProc, autoStart)
-
-extern DeviceIntPtr _AddInputDevice(
+extern DeviceIntPtr AddInputDevice(
     DeviceProc /*deviceProc*/,
     Bool /*autoStart*/);
 
@@ -190,24 +182,10 @@ extern void RemoveDevice(
 
 extern int NumMotionEvents(void);
 
-#undef  RegisterPointerDevice
 extern void RegisterPointerDevice(
-    DevicePtr /*device*/);
-
-#define RegisterPointerDevice(device) \
-       _RegisterPointerDevice(device)
-
-extern void _RegisterPointerDevice(
     DeviceIntPtr /*device*/);
 
-#undef  RegisterKeyboardDevice
 extern void RegisterKeyboardDevice(
-    DevicePtr /*device*/);
-
-#define RegisterKeyboardDevice(device) \
-       _RegisterKeyboardDevice(device)
-
-extern void _RegisterKeyboardDevice(
     DeviceIntPtr /*device*/);
 
 extern DevicePtr LookupKeyboardDevice(void);
